[FIX] Final reformatting of code